--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "systemjs": "^0.19.39"
   },
   "devDependencies": {
     "lite-server": "^2.2.2",
